name:                pure-popup
version:             0.8.0.0
homepage:            purehs.org/doc/pure-popup
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-popup.git

library
  build-depends:
    base,
    pure,
    pure-cond,
    pure-css,
    pure-prop,
    pure-styles,
    pure-txt,
    pure-theme,
    pure-portal
  exposed-modules: 
    Pure.Popup
  hs-source-dirs:      src
  default-language:    Haskell2010
