name:                pure-popup
version:             0.8.0.0
homepage:            purehs.org/doc/pure-popup
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-popup.git

library
  build-depends:
    base,
    pure,
    pure-elm,
    pure-prop,
    pure-txt,
    pure-lifted
  exposed-modules: 
    Pure.Popup
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    CPP
    DataKinds
    DeriveGeneric
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    PostfixOperators
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    ViewPatterns
  hs-source-dirs:      src
  default-language:    Haskell2010
